# FDA_AdCom

./: .env.example  .gitignore  CLAUDE_HANDOFF_STATUS.txt  Dockerfile  FDA_AdCom_ChatGPT_handoff.txt  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: pages.yml
data/: outcome_labels.csv  paper_trades.csv  sponsor_tickers.csv  state.json
data/history_runs/: 07ae88dc3a7a1552.json  07d0a87f7ff02db9.json  08d7a4cf68c80338.json  09a334a6da830f6d.json  0b99a891dd01a3b2.json  0d2a6ee95a1222ca.json  0fc8404dea4b49e7.json  1034b51dfc26ba97.json  1b07cb209a078f7d.json  1e073e5d75d2501a.json  2252b7c3b1118d54.json  240cd9545335df0e.json  25ffbfbe22b73aa6.json  284689ceeabfc67f.json  2b2013a2acf6a3ce.json  2b7ff1a06c480c90.json  2dcd82ca6df64ddf.json  2df3a6f5abe90a0c.json  35086eada06cf1cb.json  3a4dcb0e38851c6c.json  3b3b8e54170847af.json  3c2afb6950868d2b.json  3ea9b6d3e184b0d5.json  40b964bf5edaa2cb.json  44ec7ad56d1a47b2.json  4673ede6596e5988.json  53b122bb42436799.json  5718dbb37dcd6999.json  65950bfbc4d16fe2.json  66e326fd862af572.json  6df8a6a4aa29769e.json  74db73c2a563cd0a.json  74f2619b703a09c2.json  765741af520c206b.json  8402acbe7ffac6ca.json  8d434aa9278b0cf2.json  97cb97638c1fc01a.json  9c95a2aedd2a812b.json  9d2b630fa2e57570.json  a118892fa2431d44.json  (+17 more)
deploy/: fda-adcom.service
docs/: backlog.md  paper_trading_playbook.md
scripts/: analyze_misclassified_cases.py  audit_outcome_labels.py  infer_briefing_release_dates.py  label_market_outcomes.py
site/: app.js  styles.css
tests/: test_fda_monitor.py  test_signals.py
(+48 files in other folders)
