[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda-adcom"
version = "0.1.0"
description = "FDA AdCom briefing document monitor and analysis pipeline"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pypdf>=4.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
ai = [
  "anthropic>=0.34.0",
  "openai>=1.40.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
fda-adcom = "fda_adcom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
